<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_weight="1"
        android:id="@+id/nested_scroll_item">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_marginBottom="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/create_album">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/album_data_header"
                android:id="@+id/data_header"
                android:layout_marginTop="@dimen/extra_large_top_margin"
                android:layout_marginHorizontal="@dimen/horizontal_margin"
                style="@style/Text_20_black_bold"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MaterialEditTextClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/album_name_input"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="@dimen/horizontal_margin"
                android:hint="@string/album_name_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/album_name"
                    android:layout_height="wrap_content"
                    style="@style/EditTextOneLineStyle"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MaterialEditTextClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/album_desc_input"
                android:layout_marginTop="@dimen/small_top_margin"
                android:hint="@string/album_desc_hint"
                android:layout_marginHorizontal="@dimen/horizontal_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/album_desc"
                    android:layout_height="wrap_content"
                    style="@style/EditTextOneLineStyle"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/album_create_photos_list_header"
                android:layout_marginTop="@dimen/extra_large_top_margin"
                android:id="@+id/photo_header"
                android:layout_marginHorizontal="@dimen/horizontal_margin"
                style="@style/Text_20_black_bold"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/photo_error"
                android:text="@string/create_album_photo_list_empty_error"
                android:layout_marginTop="4dp"
                style="@style/Text_error_style"
                android:layout_marginHorizontal="@dimen/horizontal_margin"
                android:visibility="gone"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/photo_list"
                android:layout_marginTop="12dp"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="4"
                tools:itemCount="8"
                android:paddingStart="1dp"
                tools:listitem="@layout/photo_item"/>

            <com.example.picturegallery.ui.views.InfoView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/info_view"
                android:visibility="gone"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView >

    <com.google.android.material.button.MaterialButton
        style="@style/Button_16_blue_8"
        android:layout_marginBottom="24dp"
        android:layout_marginHorizontal="16dp"
        android:id="@+id/create_album"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.appcompat.widget.LinearLayoutCompat>

